chapt3/topic_ws/log/build_2025-09-22_16-44-14/demo_python_topic/stderr.log
  File "/home/bohn/FishRos/chapt3/topic_ws/install/demo_python_topic/lib/python3.10/site-packages/demo_python_topic/novel_sub_node.py", line 10
    class NovelSubNode(Node)
                            ^
SyntaxError: expected ':'

